# skbooks

./: .gitignore  .pre-commit-config.yaml  openapi-ts.config.ts  package-lock.json  package.json
backend/: alembic.ini  crud.py  database.py  isbn.py  logging_config.py  main.py  models.py  pyproject.toml  settings.py
backend/migrations/: env.py
backend/migrations/versions/: 2025_07_19_1341-0ba665cc46ae_first.py  2025_07_20_1653-a720c5ba07ca_first.py
src/lib/: google-books.ts
src/lib/client/: sdk.gen.ts  types.gen.ts
src/lib/components/: BarcodeScanner.svelte  BookCard.svelte  Bookcase.svelte  ScannedBookGallery.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/scanner/: +page.svelte
